installer.sh: install from cloudant pypi
installer.sh should install cirrus from pypi.cloudant.com.
It should also install version 0.1.7 as a version that is known to work
with cloudant internals.

Update readme, configs with references to the original repo.

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -1,8 +1,8 @@
 [package]
 name = cirrus-cli
 version = 0.2.16
-description = cirrus development and build git extensions
-organization = evansde77
+description = Gitflow automation
+organization = Cloudant
 version_file = src/cirrus/__init__.py
 
 [gitflow]
@@ -33,4 +33,8 @@ threshold = 10
 
 [test-default]
 where = tests/
+
+[pypi]
+pypi_url = pypi.cloudant.com
+pypi_upload_path = /opt/pypi-server/packages/
 
