--- a/cirrus.conf
+++ b/cirrus.conf
@@ -1,8 +1,8 @@
 [package]
 name = cirrus-cli
-version = 0.2.16
-description = Gitflow automation
-organization = Cloudant
+version = 1.0.1
+description = cirrus development and build git extensions
+organization = cloudant
 version_file = src/cirrus/__init__.py
 
 [gitflow]
@@ -33,8 +33,4 @@ threshold = 10
 
 [test-default]
 where = tests/
-
-[pypi]
-pypi_url = pypi.cloudant.com
-pypi_upload_path = /opt/pypi-server/packages/
 
