cirrus.conf: add pypi section

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -34,3 +34,7 @@ threshold = 10
 [test-default]
 where = tests/
 
+[pypi]
+pypi_url = pypi.cloudant.com
+pypi_upload_path = /opt/pypi-server/packages/
+
