--- a/cirrus.conf
+++ b/cirrus.conf
@@ -6,7 +6,7 @@ organization = cloudant
 version_file = src/cirrus/__init__.py
 
 [gitflow]
-develop_branch = develop
+develop_branch = new-development
 release_branch_prefix = release/
 feature_branch_prefix = feature/
 
