Update pypi url

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -35,6 +35,5 @@ threshold = 10
 where = tests/
 
 [pypi]
-pypi_url = pypi.cloudant.com
-pypi_upload_path = /opt/pypi-server/packages/
+pypi_url = na.artifactory.swg-devops.com/artifactory/api/pypi/wcp-sapi-pypi-virtual
 
