--- a/cirrus.conf
+++ b/cirrus.conf
@@ -4,6 +4,7 @@ version = 1.1.1
 description = cirrus development and build git extensions
 organization = cloudant
 version_file = src/cirrus/__init__.py
+python_versions = 2
 
 [gitflow]
 develop_branch = new-development
