Set config master_branch=new-master

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -8,6 +8,7 @@ python_versions = 2
 
 [gitflow]
 develop_branch = new-development
+master_branch = new-master
 release_branch_prefix = release/
 feature_branch_prefix = feature/
 
