--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ argparse==1.2.1
 arrow==0.4.2
 Fabric==2.4.0
 GitPython==2.1.9
-nose==1.3.0
 pep8==1.5.7
 pylint==1.3.0
+pytest
 requests==2.3.0
 PyChef==0.2.3
 keyring==8.5.1
@@ -14,4 +14,3 @@ dockerstache>=0.0.9
 requests-toolbelt==0.6.2
 tox
 wheel
-
