Make GH api url configurable

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -12,6 +12,9 @@ master_branch = new-master
 release_branch_prefix = release/
 feature_branch_prefix = feature/
 
+[github]
+api_base = https://api.github.com
+
 [commands]
 cirrus = cirrus.delegate:main
 hello = cirrus.hello:main
