--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 
 python:
-  - "3.5"
-
-install: "pip install -r requirements.txt"
+  - 3.5
+install:
+  - pip install -e .
 # command to run tests
-script: nosetests -w ./tests/unit
-
+script:
+  - pytest
 notifications:
   email: false
